# Marp2PPTX

./: .gitignore  CLAUDE.md  README.md  issues.md  main.py  pyproject.toml  pyproject.toml.bak  refactor-plan.md
.github/workflows/: workflow.yml
marp2pptx/: __main__.py  postprocessing.py
resources/: characters.marp.md  header_and_footer.md  images.marp.md  text.marp.md  theme-gaia.marp.md
scripts/: publish.py
src/: __init__.py  marp_convert.py  postprocessing.py  preprocessing.py  render_div_as_image.py
tests/: test_marp_postprocess.py
