[project]
name = "2602-marp2pptx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
]

[tool.uv]
link-mode = "copy"
